--- a/inside-deep-learing/11-seq-2-seq/01_sequence_to_sequence.ipynb
+++ b/inside-deep-learing/11-seq-2-seq/01_sequence_to_sequence.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNxyXxYWDvX7Uswvm2HRUgj",
+      "authorship_tag": "ABX9TyMfZqVGvHgJULt7J+mc28Cv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,10 +102,37 @@
         "!wget https://github.com/EdwardRaff/Inside-Deep-Learning/raw/main/idlmam.py"
       ],
       "metadata": {
-        "id": "j8dfqZhAI7hK"
+        "id": "j8dfqZhAI7hK",
+        "outputId": "a9380490-2349-4da2-c143-a2ca7b94706f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-03-31 06:33:26--  https://github.com/EdwardRaff/Inside-Deep-Learning/raw/main/idlmam.py\n",
+            "Resolving github.com (github.com)... 140.82.113.4\n",
+            "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/EdwardRaff/Inside-Deep-Learning/main/idlmam.py [following]\n",
+            "--2023-03-31 06:33:27--  https://raw.githubusercontent.com/EdwardRaff/Inside-Deep-Learning/main/idlmam.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 22064 (22K) [text/plain]\n",
+            "Saving to: ‘idlmam.py’\n",
+            "\n",
+            "idlmam.py           100%[===================>]  21.55K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2023-03-31 06:33:28 (106 MB/s) - ‘idlmam.py’ saved [22064/22064]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -156,10 +183,23 @@
         "from IPython.display import Latex"
       ],
       "metadata": {
-        "id": "8U1JNhEmEkzG"
+        "id": "8U1JNhEmEkzG",
+        "outputId": "9dc2773e-3a4d-4132-c637-d40623a62a83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-3-024163930d81>:3: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+            "  set_matplotlib_formats('png', 'pdf')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -221,7 +261,7 @@
       ],
       "metadata": {
         "id": "NymODd7xqoW7",
-        "outputId": "069c1612-63ff-4778-dc68-55054bf3c68c",
+        "outputId": "5992a809-2c4b-4995-84b9-d277067bb4ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -253,7 +293,7 @@
       ],
       "metadata": {
         "id": "e-hdDWUGq9tb",
-        "outputId": "51aeff51-c595-4c69-9445-d026337c30e7",
+        "outputId": "cf376f06-1455-4d1a-94df-e75867ca6b79",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -295,7 +335,7 @@
       ],
       "metadata": {
         "id": "jtko00QyrbC3",
-        "outputId": "a04b3bcf-26e2-442e-87cd-9460788c695f",
+        "outputId": "21d04d6b-3ddd-4440-9dc9-92e0841b8826",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -335,12 +375,12 @@
       ],
       "metadata": {
         "id": "DG4yIqcWsrU8",
-        "outputId": "f5fb35bd-40b4-45f9-b84c-200a918d7b63",
+        "outputId": "7b537735-c026-41b7-ded2-5eafcedf63b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +429,7 @@
       "metadata": {
         "id": "rsFqIimT7L9B"
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -400,59 +440,75 @@
       "metadata": {
         "id": "AXROIGZbLf3A"
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "B = 128\n",
-        "epochs= 10\n",
+        "# let's define a collate_fn function to create one larger batch from the inputs that are different lengths\n",
+        "def pad_batch(batch):\n",
+        "  \"\"\"Pad items in the batch to the length of the longest item in the batch\"\"\"\n",
+        "  \"\"\"\n",
+        "  We actually have two different maxiumum lengths! \n",
+        "  The max length of the input sequences, and the max length of the output sequences. \n",
+        "  So we will determine each seperatly, and only pad the inputs/outputs by the exact amount we need\n",
+        "  \"\"\"\n",
+        "  max_x = max([i[0].size(0) for i in batch])\n",
+        "  max_y = max([i[1].size(0) for i in batch])\n",
         "\n",
-        "largest_train = LargestDigit(mnist_train)\n",
-        "largest_test = LargestDigit(mnist_test)\n",
+        "  PAD = word2index[PAD_token]\n",
         "\n",
-        "train_loader = DataLoader(largest_train, batch_size=B, shuffle=True)\n",
-        "test_loader = DataLoader(largest_train, batch_size=B)"
+        "  # We will use the F.pad function to pad each tensor to the right\n",
+        "  X = [F.pad(i[0], (0, max_x[0].size(0)), value=PAD) for i in batch]\n",
+        "  Y = [F.pad(i[1], (0, max_y[1].size(0)), value=PAD) for i in batch]\n",
+        "\n",
+        "  X, Y = torch.stack(X), torch.stack(Y)\n",
+        "  return (X, Y), Y"
       ],
       "metadata": {
-        "id": "SosIhpxes8xQ",
-        "outputId": "1731c16d-d4d4-4670-b751-0f4a38b53e2d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 235
-        }
+        "id": "5wYj9qN5YPpC"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-6036ffaac313>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mlargest_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLargestDigit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmnist_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mlargest_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLargestDigit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmnist_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'LargestDigit' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Testing the data loaders\n",
-        "num_epochs = 1\n",
-        "for epoch in range(num_epochs):\n",
-        "  for batch_idx, (x, y) in enumerate(train_loader):\n",
-        "    if batch_idx >= 3:\n",
-        "      break\n",
-        "    print(f\"Batch index: {batch_idx} | Batch size: {y.shape[0]} | x shape: {x.shape} | y shape: {y.shape}\")\n",
+        "# Want a consistent dataset split\n",
+        "set_seed(42)\n",
         "\n",
-        "print(f\"Labels from current batch: {y}\")"
+        "B = 128\n",
+        "epochs = 10\n",
+        "\n",
+        "train_size = round(len(big_dataset) * 0.9)\n",
+        "test_size = len(big_dataset) - train_size\n",
+        "\n",
+        "train_dataset, test_dataset = torch.utils.data.random_split(big_dataset, [train_size, test_size])\n",
+        "\n",
+        "train_loader = DataLoader(train_dataset, batch_size=B, shuffle=True, collate_fn=pad_batch)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=B, collate_fn=pad_batch)"
       ],
       "metadata": {
-        "id": "f3FVMPa8Fn04"
+        "id": "SosIhpxes8xQ"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Inputs to Seq2Seq"
+      ],
+      "metadata": {
+        "id": "fEYFfHdcgo78"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AJyuOrxggp-T"
       },
       "execution_count": null,
       "outputs": []
