--- a/inside-deep-learing/11-seq-2-seq/01_sequence_to_sequence.ipynb
+++ b/inside-deep-learing/11-seq-2-seq/01_sequence_to_sequence.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO5S2bSorVobj2Fchqm921g",
+      "authorship_tag": "ABX9TyO0EKlUfLgrFqh6JMdEEauB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,37 +102,10 @@
         "!wget https://github.com/EdwardRaff/Inside-Deep-Learning/raw/main/idlmam.py"
       ],
       "metadata": {
-        "id": "j8dfqZhAI7hK",
-        "outputId": "6d0d08c3-9fb3-422e-82c7-5b28acd2c80f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "j8dfqZhAI7hK"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-04-06 05:43:05--  https://github.com/EdwardRaff/Inside-Deep-Learning/raw/main/idlmam.py\n",
-            "Resolving github.com (github.com)... 20.205.243.166\n",
-            "Connecting to github.com (github.com)|20.205.243.166|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/EdwardRaff/Inside-Deep-Learning/main/idlmam.py [following]\n",
-            "--2023-04-06 05:43:05--  https://raw.githubusercontent.com/EdwardRaff/Inside-Deep-Learning/main/idlmam.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 22064 (22K) [text/plain]\n",
-            "Saving to: ‘idlmam.py’\n",
-            "\n",
-            "idlmam.py           100%[===================>]  21.55K  --.-KB/s    in 0s      \n",
-            "\n",
-            "2023-04-06 05:43:06 (109 MB/s) - ‘idlmam.py’ saved [22064/22064]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -167,23 +140,10 @@
         "from idlmam import AttentionAvg, GeneralScore, DotScore, AdditiveAttentionScore, ApplyAttention, getMaskByFill"
       ],
       "metadata": {
-        "id": "_9xoD7-8EibG",
-        "outputId": "4910c2f7-75d6-4483-c0f9-5899b07cf7af",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "_9xoD7-8EibG"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-2-7eda8ec6937e>:10: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-            "  from tqdm.autonotebook import tqdm\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -197,7 +157,7 @@
       ],
       "metadata": {
         "id": "8U1JNhEmEkzG",
-        "outputId": "b9b3d829-5575-4163-8cf1-ea9ea8ae1c11",
+        "outputId": "6be69a24-3763-4a82-8fbb-502e8dc73fc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -274,7 +234,7 @@
       ],
       "metadata": {
         "id": "NymODd7xqoW7",
-        "outputId": "1e2424aa-fca1-4896-bf7f-2660550fba4a",
+        "outputId": "dd3347c3-ae0b-4ccc-81c9-e461230bb6df",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -306,7 +266,7 @@
       ],
       "metadata": {
         "id": "e-hdDWUGq9tb",
-        "outputId": "a26756c2-0a47-4649-d556-3700774cd236",
+        "outputId": "6201fab5-57a1-4e38-e03f-b9e950ac5355",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -348,7 +308,7 @@
       ],
       "metadata": {
         "id": "jtko00QyrbC3",
-        "outputId": "5de7bb70-b85f-4263-8b88-131ff8c6dcaa",
+        "outputId": "384286cb-f092-4eaa-a916-930147fe3385",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -388,7 +348,7 @@
       ],
       "metadata": {
         "id": "DG4yIqcWsrU8",
-        "outputId": "c02d9164-bac8-4fd7-b19f-1f5deb72ea4e",
+        "outputId": "d916a420-3836-4d7c-9cfd-3a639bed1c9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -560,10 +520,10 @@
         "    We set the hidden size to half the intended length, because we will make the encoder bi-directional.\n",
         "    That means we will get 2 hidden state representations which we will concatinate together, giving us the desired size!\n",
         "    \"\"\"\n",
-        "    self.encode_layers = nn.GRU(input_size=embedding_size, hidden_size=hidden_size // 2, num_layers=layers, bidirectional=True)\n",
+        "    self.encoding_layers = nn.GRU(input_size=embedding_size, hidden_size=hidden_size // 2, num_layers=layers, bidirectional=True)\n",
         "\n",
         "    # But decoder will be uni-directionall, and we need to use CRUCells so that we can do the decoding one step at a time\n",
-        "    self.decode_layers = nn.ModuleList([nn.GRUCell(embedding_size, hidden_size)] + [nn.GRUCell(hidden_size, hidden_size) for i in range(layers - 1)])\n",
+        "    self.decoding_layers = nn.ModuleList([nn.GRUCell(embedding_size, hidden_size)] + [nn.GRUCell(hidden_size, hidden_size) for i in range(layers - 1)])\n",
         "    self.score_net = DotScore(hidden_size)\n",
         "\n",
         "    \"\"\"\n",
@@ -586,13 +546,77 @@
         "    self.apply_attention = ApplyAttention()\n",
         "\n",
         "  def forward(self, input):\n",
-        "                                        \n"
+        "    ###################################################\n",
+        "    # Step-1 : Preparation, embedding, and masking block\n",
+        "    ###################################################\n",
+        "    # Input should be (B, T) or ((B, T), (B, T')) depending on whether we are in testing or training mode\n",
+        "    if isinstance(input, tuple):\n",
+        "      input, target = input\n",
+        "    else:\n",
+        "      target = None\n",
+        "\n",
+        "    # What is the batch size?\n",
+        "    B = input.size(0)\n",
+        "    # What is the max number of input time steps?\n",
+        "    T = input.size(1)\n",
+        "    # embd all of the input values (B, T, D)\n",
+        "    x = self.embedding_layer(input)\n",
+        "\n",
+        "    # grab the device that the model currently resides on we will need this later\n",
+        "    device = x.device \n",
+        "\n",
+        "    # We will use the mask to figure out how long each input sequence is\n",
+        "    mask = getMaskByFill(x)\n",
+        "    seq_lengths = mask.sum(dim=1).view(-1) # shape (B), containing the # of non-zero values\n",
+        "\n",
+        "    ###################################################\n",
+        "    #   Step-2 : Encoding block\n",
+        "    ###################################################\n",
+        "    # the sequence lengths will be used to create a packed input for the encoder RNN\n",
+        "    x_packed = pack_padded_sequence(x, seq_lengths.cpu(), batch_first=True, enforce_sorted=False)\n",
+        "    h_encoded, h_last = self.encoding_layers(x_packed)\n",
+        "    h_encoded, _ = pad_packed_sequence(h_encoded)  # (B, T, 2, D//2) , b/c its bidirectional\n",
+        "    # (B, T, D), Now h_encoded is the result of running the encoder RNN on the input!\n",
+        "    h_encoded = h_encoded.view(B, T, -1)\n",
+        "\n",
+        "    # Getting the last hidden state is a little trickier\n",
+        "    # first the output gets reshaped as (num_layers, directions, batch_size, hidden_size)\n",
+        "    # and then we grab the last index in the first dimension, because we want the last layer's output\n",
+        "    hidden_size = h_encoded.size(2)\n",
+        "    h_last = h_last.view(-1, 2, B, hidden_size // 2)[-1, :, :, :]  # The shape is now (2, B, D/2)\n",
+        "    # now we will reorder to (B, 2, D/2), and flatten the last two dimensions down to (B, D)\n",
+        "    h_last = h_last.permute(1, 0, 2).reshape(B, -1)\n",
+        "    # End of Encoding portion. \n",
+        "    # h_encoded now contains the representation of the input data!\n",
+        "    # h_last has the final ouputs of the RNN, to use as the initial input state for the decoder\n",
+        "\n",
+        "    ###################################################\n",
+        "    #   Step-3 : Decoding block\n",
+        "    ###################################################\n",
+        "    # The first input to the decoder will be the output of the last encoder step decoder_input = h_last\n",
+        "    \n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "AJyuOrxggp-T"
+        "id": "AJyuOrxggp-T",
+        "outputId": "4fd11695-988c-42e4-ba27-543adb8273b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        }
       },
-      "execution_count": 16,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-0327882ef43a>\"\u001b[0;36m, line \u001b[0;32m40\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+          ]
+        }
+      ]
     }
   ]
 }
