--- a/inside-deep-learing/11-seq-2-seq/01_sequence_to_sequence.ipynb
+++ b/inside-deep-learing/11-seq-2-seq/01_sequence_to_sequence.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO0EKlUfLgrFqh6JMdEEauB",
+      "authorship_tag": "ABX9TyMzL+VplCYeFP7Uut4zkzd9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,7 +162,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "YTO1Pk4x24PP"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "nXiYSSxO707X"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
       "metadata": {
         "id": "_chm5G2Z3Eqs"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,7 +271,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +353,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
       "metadata": {
         "id": "rsFqIimT7L9B"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -413,7 +413,7 @@
       "metadata": {
         "id": "AXROIGZbLf3A"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,7 +442,7 @@
       "metadata": {
         "id": "5wYj9qN5YPpC"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
       "metadata": {
         "id": "SosIhpxes8xQ"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -594,29 +594,62 @@
         "    #   Step-3 : Decoding block\n",
         "    ###################################################\n",
         "    # The first input to the decoder will be the output of the last encoder step decoder_input = h_last\n",
-        "    \n",
+        "    h_prevs = [h_last for l in range(len(self.decoding_layers))]  # new hidden states for decoders\n",
+        "\n",
+        "    # We will save all the attention mechanism results for visualization\n",
+        "    all_attentions = []\n",
+        "    all_predictions = []\n",
+        "\n",
+        "    # Grab the last item from the input (which should be an EOS marker) as the first input for the decoder\n",
+        "    # We could also hard-code the SOS marker instead\n",
+        "    # we need to gathers the specified indices along the specified axis (1)\n",
+        "    decoder_input = self.embedding_layer(input.gather(1, seq_lengths.view(-1, 1) - 1).flatten())\n",
+        "\n",
+        "    # How many decoding steps should we do?\n",
+        "    steps = min(self.max_decode_length, T)\n",
+        "    # If we are training, the target values tells us exactly how many steps to take\n",
+        "    if target is not None:\n",
+        "      steps = target.size(1)  # We know the exact decode length!\n",
+        "\n",
+        "    ###################################################\n",
+        "    #   Step-4 : Compute the context and attention block\n",
+        "    ###################################################\n",
+        "    # Do we use teacher forcing (true) or auto-regressive (false)\n",
+        "    teacher_forcing = np.random.choice((True, False))\n",
+        "    for t in range(steps):\n",
+        "      x_in = decoder_input  # (B, D)\n",
+        "      for l in range(len(self.decoding_layers)):\n",
+        "        h_prev = h_prevs[l]\n",
+        "        h = h_prevs[l]\n",
+        "        h = self.decoding_layers[l](x_in, h_prev)\n",
+        "\n",
+        "        h_prevs[l] = h\n",
+        "        x_in = h\n",
+        "      \n",
+        "      # (B, D), we now have the hidden state for the decoder at this time step\n",
+        "      h_decoder = x_in\n",
+        "\n",
+        "      # This is the attention mechanism, lets look at all the previous encoded states and see which look relevant\n",
+        "      scores = self.score_net(h_encoded, h_decoder)  # (B, T, 1)\n",
+        "      context, weights = self.apply_attention(h_encoded, scores, mask=mask)  # (B, D) for x and (B, T) for alpha\n",
+        "\n",
+        "      # save the attention weights for visualization later\n",
+        "      all_attentions.append(weights.detach())  # want to compute anything with them anymore, just want to save their values for visualizations\n",
+        "\n",
+        "      ###################################################\n",
+        "      #   Step-5 : Compute prediction block\n",
+        "      ###################################################\n",
+        "      # Now lets compute the final representation by concatinating the attention result and the initial context\n",
+        "      word_pred = \n",
+        "\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "AJyuOrxggp-T",
-        "outputId": "4fd11695-988c-42e4-ba27-543adb8273b5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
-        }
+        "id": "AJyuOrxggp-T"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-0327882ef43a>\"\u001b[0;36m, line \u001b[0;32m40\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
