--- a/inside-deep-learing/11-seq-2-seq/01_sequence_to_sequence.ipynb
+++ b/inside-deep-learing/11-seq-2-seq/01_sequence_to_sequence.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMzL+VplCYeFP7Uut4zkzd9",
+      "authorship_tag": "ABX9TyNKif9XQQ4G1O/Lga51rNde",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -471,7 +471,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Inputs to Seq2Seq"
+        "##Seq2Seq Attention"
       ],
       "metadata": {
         "id": "fEYFfHdcgo78"
@@ -640,13 +640,62 @@
         "      #   Step-5 : Compute prediction block\n",
         "      ###################################################\n",
         "      # Now lets compute the final representation by concatinating the attention result and the initial context\n",
-        "      word_pred = \n",
+        "      word_pred = torch.cat((context, h_decoder), dim=1)  # (B, D) + (B, D)  -> (B, 2*D)\n",
+        "      # and get a prediction about what the next token is by pushing it through a small fully-connected network\n",
+        "      word_pred = self.predict_word(word_pred)            # (B, 2*D) -> (B, V)\n",
+        "      all_predictions.append(word_pred)\n",
         "\n",
+        "      ###################################################\n",
+        "      #   Step-6 : Select decoder's next input block\n",
+        "      ###################################################\n",
+        "      # Now we have $\\hat{y}_t$! we need to select the input for the next time step. \n",
+        "      # We use torch.no_grad() because the gradient will carry through the hidden states of the RNN, not the input tokens\n",
+        "      with torch.no_grad():\n",
+        "        if self.training:\n",
+        "          if target is not None and teacher_forcing:\n",
+        "            # We have the target and selected teacher forcing, so use the correct next answer\n",
+        "            next_words = target[:, t].squeeze()\n",
+        "          else:\n",
+        "            # Sample the next token based on the predictions made\n",
+        "            next_words = torch.multinomial(F.softmax(word_pred, dim=1), 1)[:, -1]\n",
+        "        else:\n",
+        "          # we are trying to make an actual prediction, so take the most likely word\n",
+        "          # we could improve this by using temperature and sampling method\n",
+        "          next_words = torch.argmax(word_pred, dim=1)\n",
         "\n",
-        "\n"
+        "      # We've decided what the next tokens are, we are back to using the gradient calculation \n",
+        "      # so that the embedding layer is adjusted appropriately during training. \n",
+        "      decoder_input = self.embedding_layer(next_words.to(device))\n",
+        "\n",
+        "    # done decoding!\n",
+        "\n",
+        "    if self.training:\n",
+        "      # When training, only the predictions are important\n",
+        "      return torch.stack(all_predictions, dim=1)\n",
+        "    else:\n",
+        "      # When evaluatin, we also want to look at the attention weights\n",
+        "      return torch.stack(all_predictions, dim=1), torch.stack(all_attentions, dim=1).squeeze()"
       ],
       "metadata": {
         "id": "AJyuOrxggp-T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Training and evaluation"
+      ],
+      "metadata": {
+        "id": "6PI8KE0lNdu2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mu9w_8QSNeX6"
       },
       "execution_count": null,
       "outputs": []
